Initial work for 1.18 port
Done: code compiles
Not done: code running, datagen updates, removing cauldron stuff that almost certaintly will not work yet